--- a/people.html
+++ b/people.html
@@ -66,7 +66,8 @@
                      </div>
                      <div class="span9">
                         <h4>Caicai ZHANG</h4>
-                        <p>Associate Professor, Department of Chinese and Bilingual Studies, The Hong Kong Polytechnic University<br/>Member, Research Center for Language, Cognition & Neuroscience<br/>Affiliated member, the Speech Therapy Unit</p>
+                        <p>Associate Professor, <a href="https://www.polyu.edu.hk/cbs/">Department of Chinese and Bilingual Studies</a>, The Hong Kong Polytechnic University<br/>Member, <a href="https://www.polyu.edu.hk/cbs/rclcn/">Research Center for Language, Cognition & Neuroscience</a><br/>Affiliated member, <a href="https://www.polyu.edu.hk/cbs/st/">the Speech Therapy Unit</a></p>
+			<p>Departmental Research Committee Deputy Chair cum RPg Programme Leader<br/>Editorial Board member and co-editor for the "Language Processing" collection, <i>Scientific Reports</i><br/>Academic Editor, <i>PLOS ONE</i><br/>Associate Editor, <i>Frontiers in Psychology</i></p>
                         <p>Ph.D. in Linguistics (The Chinese University of Hong Kong)<br/>M.Phil. in Humanities (Hong Kong University of Science and Technology)<br/>B.A. in Chinese Language (Fudan University)</p>
                         <p><b>Email: </b><a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a></p>
                         <p><b><a href="https://research.polyu.edu.hk/en/persons/caicai-zhang">Research Explorer</a>, <a href="https://scholar.google.com/citations?user=3muabuIAAAAJ&hl=en&oi=ao">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Caicai-Zhang">ResearchGate</a></b></p>
@@ -108,6 +109,19 @@
                   </div>
                   <hr>
 
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <img src="thumbs/photo_cherry.jpg" alt="Cherry Chung"/>
+                     </div>
+                     <div class="span9">
+                        <h4>Cherry Yee Lok CHUNG</h4>
+			<p><i>Research Assistant</i></p>
+                        <p>Cherry intro here</p>
+                        <p><b>Email: </b><a href="mailto:yeelok-cherry.chung@polyu.edu.hk">yeelok-cherry.chung@polyu.edu.hk</a></p>
+                     </div>
+                  </div>
+                  <hr>
+		       
                   <div class="row-fluid">
                      <div class="span3">
                         <img src="thumbs/photo_adeel.jpeg" alt="Adeel Khan"/>
@@ -189,7 +203,7 @@
                      <div class="span9">
                         <h4>Hansy Jueyao LIN</h4>
 			<p><i>PhD candidate</i></p>
-                        <p>Hansy...</p>
+                        <p>Hansy intro here</p>
                         <p><b>Email: </b><a href="mailto:jueyao-hansy.lin@connect.polyu.hk">jueyao-hansy.lin@connect.polyu.hk</a></p>
 			<p><b><a href="https://www.researchgate.net/profile/Lin-Jueyao">ResearchGate</a></b></p>
                      </div>
