--- a/people.html
+++ b/people.html
@@ -50,8 +50,8 @@
             <div class="span3 bs-docs-sidebar" id="navparent">
                <ul class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200" data-offset-bottom="260">
                   <li><a href="#principalinvestigator">Principal Investigator</a></li>
-                  <li><a href="#staff">Research Staffs</a></li>
-                  <li><a href="#student">Research Students</a></li>
+                  <li><a href="#staff">Research Staff</a></li>
+                  <li><a href="#student">Research Student</a></li>
                </ul>
             </div>
             <div class="span8 offset1">
@@ -66,8 +66,8 @@
                      </div>
                      <div class="span9">
                         <h4>Caicai ZHANG</h4>
-                        <p>Associate Professor, <a href="https://www.polyu.edu.hk/cbs/">Department of Chinese and Bilingual Studies</a>, The Hong Kong Polytechnic University<br/>Member, <a href="https://www.polyu.edu.hk/cbs/rclcn/">Research Center for Language, Cognition & Neuroscience</a><br/>Affiliated member, <a href="https://www.polyu.edu.hk/cbs/st/">the Speech Therapy Unit</a></p>
-			<p>Departmental Research Committee Deputy Chair cum RPg Programme Leader<br/>Editorial Board member and co-editor for the "Language Processing" collection, <i>Scientific Reports</i><br/>Academic Editor, <i>PLOS ONE</i><br/>Associate Editor, <i>Frontiers in Psychology</i></p>
+                        <p>Associate Professor, Departmental Research Committee Deputy Chair & RPg Programme Leader, <a href="https://www.polyu.edu.hk/cbs/">Department of Chinese and Bilingual Studies</a>, The Hong Kong Polytechnic University<br/>Member, <a href="https://www.polyu.edu.hk/cbs/rclcn/">Research Center for Language, Cognition & Neuroscience</a><br/>Affiliated member, <a href="https://www.polyu.edu.hk/cbs/st/">the Speech Therapy Unit</a></p>
+			<p>Editorial Board member & co-editor for the "Language Processing" collection, <i>Scientific Reports</i><br/>Academic Editor, <i>PLOS ONE</i><br/>Associate Editor, <i>Frontiers in Psychology</i></p>
                         <p>Ph.D. in Linguistics (The Chinese University of Hong Kong)<br/>M.Phil. in Humanities (Hong Kong University of Science and Technology)<br/>B.A. in Chinese Language (Fudan University)</p>
                         <p><b>Email: </b><a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a></p>
                         <p><b><a href="https://research.polyu.edu.hk/en/persons/caicai-zhang">Research Explorer</a>, <a href="https://scholar.google.com/citations?user=3muabuIAAAAJ&hl=en&oi=ao">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Caicai-Zhang">ResearchGate</a></b></p>
@@ -78,7 +78,7 @@
 		    
                <section id="staff">
                   <div class="page-header">
-                     <h3>Research Staffs</h3>
+                     <h3>Research Staff</h3>
                   </div>
 
                   <div class="row-fluid">
@@ -193,7 +193,7 @@
 
                <section id="student">
                   <div class="page-header">
-                     <h3>Research Students</h3>
+                     <h3>Research Student</h3>
                   </div>
 
 	          <div class="row-fluid">
