--- a/people.html
+++ b/people.html
@@ -111,7 +111,7 @@
 
                   <div class="row-fluid">
                      <div class="span3">
-                        <img src="thumbs/photo_cherry.jpg" alt="Cherry Chung"/>
+                        <img src="thumbs/photo_cherrychung.jpg" alt="Cherry Chung"/>
                      </div>
                      <div class="span9">
                         <h4>Cherry Yee Lok CHUNG</h4>
