--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <h4>NEWS</h4>
 				        <ol>
 		  			
-		  <li><span style="font-weight:bold; color:#ff0000;">[***Upcoming Talk***] 5PM, HKT (UTC+8), 21 Feb 2024.</span> Dr. Christoph SCHEEPERS (University of Glasgow) on "The “Crossword Effect” in free word recall: A retrieval advantage for words encoded in line with their spatial associations". <a href="https://polyu.zoom.us/j/92524418249?pwd=WjZya2lTaTFhL2w4RzkzL1dRTUJ1Zz09">Zoom Link</a></li>
+		  <li><span style="font-weight:bold; color:#ff0000;">[***Upcoming Talk***] 5PM, HKT (UTC+8), 21 Feb 2024.</span> Dr. Christoph SCHEEPERS (University of Glasgow) on "The “Crossword Effect” in free word recall: A retrieval advantage for words encoded in line with their spatial associations". <a href="https://drcczlab.github.io/files/240221_talk_CS.pdf">Abstract</a> & <a href="https://polyu.zoom.us/j/92524418249?pwd=WjZya2lTaTFhL2w4RzkzL1dRTUJ1Zz09">Zoom Link</a></li>
 		  <br><br>
 		  <li><span style="font-weight:bold; color:#ff9900;">[Gathering] 05 Feb 2024.</span> Our lab <a href="https://drcczlab.github.io/files/240205_gather.jpg">gathered</a> to celebrate the Chinese New Year. We wish everyone a healthy, prosperous and productive Year of Dragon 🐲.</li>
 		  <li><span style="font-weight:bold; color:#3366ff;">[Invited Talk] 5PM, HKT (UTC+8), 31 Jan 2024.</span> Dr. Andriy MYACHYKOV (Northumbria University) on "Crosslinguistic Interplay and Cognitive Reserve in Bilinguals". <a href="https://drcczlab.github.io/files/240131_talk_AM.pdf">Abstract & Zoom Link</a></li>			
