--- a/people.html
+++ b/people.html
@@ -116,7 +116,7 @@
                      <div class="span9">
                         <h4>Cherry Yee Lok CHUNG</h4>
 			<p><i>Research Assistant</i></p>
-                        <p>Cherry intro here</p>
+                        <p>Cherry graduated from the Hong Kong Polytechnic University with an BA degree in Chinese and Bilingual Studies. She is currently studying Master of Speech Therapy in PolyU. Her research interests include pediatric speech-language disorders and sleep-language association.</p>
                         <p><b>Email: </b><a href="mailto:yeelok-cherry.chung@polyu.edu.hk">yeelok-cherry.chung@polyu.edu.hk</a></p>
                      </div>
                   </div>
