--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Caicai Zhang Lab - Home</title>
+      <title>Caicai Zhang's Lab - Home</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="Caicai Zhang Lab">
       <meta name="author" content="">
@@ -28,7 +28,7 @@
       <div class="container">
          <header class="jumbotron subhead" id="overview">
             <p class="lead"> The Hong Kong Polytechnic University </p>
-            <h1>Caicai Zhang Lab</h1>
+            <h1>Caicai Zhang's Lab</h1>
          </header>
          <div class="masthead">
             <div class="navbar">
