--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                         <li><a href="people.html">People</a></li>
                         <li><a href="publications.html">Publications</a></li>
                         <li><a href="grants.html">Grants</a></li>
-                        <li><a href="contact.html">Join Us</a></li>
+			<li><a href="media.html">Media</a></li>
+                        <li><a href="contact.html">Join Experiment</a></li>
                      </ul>
                   </div>
                </div>
