--- a/publications.html
+++ b/publications.html
@@ -37,6 +37,7 @@
                         <li><a href="people.html">People</a></li>
                         <li class="active"><a href="#">Publications</a></li>
                         <li><a href="grants.html">Grants</a></li>
+			<li><a href="media.html">Media</a></li>
                         <li><a href="contact.html">Join Us</a></li>
                      </ul>
                   </div>
