--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,7 @@
                         <li class="active"><a href="#">Publications</a></li>
                         <li><a href="grants.html">Grants</a></li>
 			<li><a href="media.html">Media</a></li>
-                        <li><a href="contact.html">Join Us</a></li>
+                        <li><a href="contact.html">Join Experiment</a></li>
                      </ul>
                   </div>
                </div>
