--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,8 @@
                         <li><a href="people.html">People</a></li>
                         <li><a href="publications">Publications</a></li>
                         <li><a href="grants.html">Grants</a></li>
-                        <li class="active"><a href="#">Join Us</a></li>
+			<li><a href="media.html">Media</a></li>
+                        <li class="active"><a href="#">Join Experiment</a></li>
                      </ul>
                   </div>
                </div>
