--- a/people.html
+++ b/people.html
@@ -204,7 +204,7 @@
                      <div class="span9">
                         <h4>Hansy Jueyao LIN</h4>
 			<p><i>PhD candidate</i></p>
-                        <p>Hansy intro here</p>
+                        <p>Jueyao received her BA in Chinese and Bilingual Studies focusing on Linguistic and Speech Sciences from Hong Kong Polytechnic University and MSocSc in Psychology from City University of Hong Kong. Her research interest includes memory, learning and reading difficulties, ERP studies on children with language disorders, and related psychometric analysis.</p>
                         <p><b>Email: </b><a href="mailto:jueyao-hansy.lin@connect.polyu.hk">jueyao-hansy.lin@connect.polyu.hk</a></p>
 			<p><b><a href="https://www.researchgate.net/profile/Lin-Jueyao">ResearchGate</a></b></p>
                      </div>
