--- a/publications.html
+++ b/publications.html
@@ -119,8 +119,18 @@
 <li class="publication">Zhu X., Jiao L., & Zhang C. (2010). Shengdiao si weidu [Four dimensions in tonal description]. In Pan W. Y. and Shen Z. W. (Eds.), <i>The Joy of Research II: A Festschrift in Honor of Professor William S-Y. Wang on His Seventy-Fifth Birthday</i> (pp. 401-419). Shanghai: Shanghai Education Press. [In Chinese]</li>		    
                     </ol>
 		    <hr>
-
               </section>
+
+  <section id="book">
+                  <div class="page-header">
+                     <h3>Monographs</h3>
+                  </div>
+                    <ol>
+<li class="publication">Zhang, C., Lee, C.-Y., Wang, W. S., Waye, M. M. Y., eds. (2022). <i>Relationship of Language and Music, Ten Years After: Neural Organization, Cross-domain Transfer and Evolutionary Origins.</i> Lausanne: Frontiers Media SA.<a href="https://www.frontiersin.org/research-topics/15843/relationship-of-language-and-music-ten-years-after-neural-organization-cross-domain-transfer-and-evolutionary-origins"></a></li>
+<li class="publication">Zhang, C. (2018). Phonetic constancy in the perception of Chinese tones. <i>Journal of Chinese Linguistics</i>, Monograph Series Number 28. Hong Kong: The Chinese University Press.</li>
+              </section>
+
+		    
             </div>
          </div>
       </div>
