--- a/publications.html
+++ b/publications.html
@@ -53,10 +53,12 @@
                      <h3>Peer-reviewed journal articles</h3>
 		     <p>(# = corresponding author, * = co-first author, ^ = student trainees)</p>
                   </div>
+2023
                     <ol>			    
 <li class="publication">Zhu, J., Shao, J., Zhang, C.<sup>#</sup>, Chen, F.<sup>#</sup>, & Wiener, S. (2023). Statistical information affects spoken word recognition of tone languages in stutterers: Evidence from an auditory-perceptual gating study. <i>Journal of Speech, Language, and Hearing Research, 66</i>(9), 3382–3398. <a href="https://pubs.asha.org/doi/abs/10.1044/2023_JSLHR-23-00123">Link</a></li>
 <li class="publication">Zhu, J., Chen, X.<sup>#</sup>, Chen, F., Zhang, C.<sup>#</sup>, Shao, J., & Wiener, S. (2023). Tone deafness in music does not preclude distributional learning of nonnative tonal languages in individuals with congenital amusia. <i>Journal of Speech, Language, and Hearing Research, 66</i>(7), 2461–2477. <a href="https://pubs.asha.org/doi/10.1044/2023_JSLHR-22-00572">Link</a></li>
 <li class="publication">Zhu, J., Chen, X.<sup>#</sup>, Chen, F., Zhang, C., Shao, J., & Wiener, S. (2023). Distributional learning of musical pitch despite tone-deafness in individuals with congenital amusia. <i>Journal of the Acoustical Society of America, 153</i>(5), 3117. <a href="https://doi.org/10.1121/10.0019472">Link</a></li>
+2022
 <li class="publication">Chen, X.<sup>#</sup>, Zhang, C.<sup>#</sup>, Chen, Y., Politzer-Ahles, S., Zeng, Y., & Zhang, J. (2022). Encoding category-level and context-specific phonological information at different stages: An EEG study of Mandarin third-tone sandhi word production. <i>Neuropsychologia, 175</i>, 108367. <a href="https://doi.org/10.1016/j.neuropsychologia.2022.108367">Link</a></li>
 <li class="publication">Chen, S.<sup>#</sup>, Zhang C., Lau, P., Yang, Y., & Li, B. (2022). Modelling representations in speech normalization of prosodic cues. <i>Scientific Reports, 12</i>, 14635. <a href="https://doi.org/10.1038/s41598-022-18838-w">Link</a></li>
 <li class="publication">Qin, Z.<sup>#</sup>, Jin, R., & Zhang, C. (2022). The effects of training variability and pitch aptitude on the overnight consolidation of lexical tones. <i>Journal of Speech, Language, and Hearing Research, 65</i>(9), 3377–3391. <a href="https://doi.org/10.1044/2022_JSLHR-22-00058">Link</a></li>
@@ -119,6 +121,15 @@
 <li class="publication">Zhu X., Jiao L., & Zhang C. (2010). Shengdiao si weidu [Four dimensions in tonal description]. In Pan W. Y. and Shen Z. W. (Eds.), <i>The Joy of Research II: A Festschrift in Honor of Professor William S-Y. Wang on His Seventy-Fifth Birthday</i> (pp. 401-419). Shanghai: Shanghai Education Press. [In Chinese]</li>		    
                     </ol>
 		    <hr>
+              </section>
+
+  <section id="book">
+                  <div class="page-header">
+                     <h3>Monographs</h3>
+                  </div>
+                    <ol>
+<li class="publication">Zhang, C., Lee, C.-Y., Wang, W. S., Waye, M. M. Y., eds. (2022). <i>Relationship of Language and Music, Ten Years After: Neural Organization, Cross-domain Transfer and Evolutionary Origins.</i> Lausanne: Frontiers Media SA. <a href="https://www.frontiersin.org/research-topics/15843/relationship-of-language-and-music-ten-years-after-neural-organization-cross-domain-transfer-and-evolutionary-origins">Link</a></li>
+<li class="publication">Zhang, C. (2018). Phonetic constancy in the perception of Chinese tones. <i>Journal of Chinese Linguistics</i>, Monograph Series Number 28. Hong Kong: The Chinese University Press.</li>
               </section>
 
   <section id="book">
