--- a/publications.html
+++ b/publications.html
@@ -88,19 +88,29 @@
 <li class="publication">DiCanio, C.<sup>#</sup>, Zhang, C., Whalen, D. H., Amith, J., & García, R. C. (2020). Phonetic structure in Yoloxóchitl Mixtec consonants. <i>Journal of the International Phonetic Association, 50</i>(3), 333–365. <a href="https://doi.org/10.1017/S0025100318000294">Link</a></li>
 		    </ol>
 2019
+		       <ol>
 <li class="publication">Qin, Z.<sup>#</sup>, & Zhang, C.<sup>#</sup> (2019). The effect of overnight consolidation in the perceptual learning of non-native tonal contrasts. <i>PLOS ONE, 14</i>(12), e0221498. <a href="https://doi.org/10.1371/journal.pone.0221498">Link</a></li>
 <li class="publication">Bakhtiar, M. <sup>#</sup>, Zhang, C., & So, S. K.<sup>^</sup> (2019). Impaired processing speed in categorical perception: Speech perception of children who stutter. <i>PLOS ONE, 14</i>(4), e0216124. <a href="https://doi.org/10.1371/journal.pone.0216124">Link</a></li>
 <li class="publication">Shao, J., & Zhang, C.<sup>#</sup> (2019). Talker normalization in typical Cantonese-speaking listeners and congenital amusics: Evidence from event-related potentials. <i>NeuroImage: Clinical, 23</i>, 101814. <a href="http://doi.org/10.1016/j.nicl.2019.101814">Link</a></li>
 <li class="publication">Shao, J., Lau, R. Y. M.<sup>^</sup>, Tang, P. O. C.<sup>^</sup>, & Zhang, C.<sup>#</sup> (2019). The effects of acoustic variation on the perception of lexical tone in Cantonese-speaking congenital amusics. <i>Journal of Speech, Language, and Hearing Research, 62</i>(1), 190–205. <a href="https://doi.org/10.1044/2018_JSLHR-H-17-0483">Link</a></li>
+		       </ol>
+2018
+		       <ol>
 <li class="publication">Shao, J., & Zhang, C.<sup>#</sup> (2018). Context integration deficit in tone perception in Cantonese speakers with congenital amusia. <i>Journal of the Acoustical Society of America, 144</i>(4), EL333–EL339. <a href="http://doi.org/https://doi.org/10.1121/1.5063899">Link</a></li>
 <li class="publication">Zhang, C.<sup>#</sup>, Shao, J., & Chen, S. (2018). Impaired perceptual normalization of lexical tones in Cantonese-speaking congenital amusics. <i>Journal of the Acoustical Society of America, 144</i>(2), 634–647. <a href="https://doi.org/10.1121/1.5049147">Link</a></li>
 <li class="publication">Zhang, C.<sup>#</sup>, & Shao, J. (2018). Normal pre-attentive and impaired attentive processing of lexical tones in Cantonese-speaking congenital amusics. <i>Scientific Reports, 8</i>(1), 8420. <a href="http://doi.org/10.1038/s41598-018-26368-7">Link</a></li>
 <li class="publication">Sjerps, M. J., Zhang, C., & Peng, G.<sup>#</sup> (2018). Lexical tone is perceived relative to locally surrounding context, vowel quality to preceding context. <i>Journal of Experimental Psychology: Human Perception and Performance, 44</i>(6), 914–924. <a href="https://doi.org/10.1037/xhp0000504">Link</a></li>
 <li class="publication">Zhang, C.<sup>#</sup> (2018). Online adjustment of phonetic expectation of lexical tones to accommodate speaker variation: A combined behavioural and ERP study. <i>Language, Cognition and Neuroscience, 33</i>(2), 175–195. <a href="https://doi.org/10.1080/23273798.2017.1376752">Link</a></li>
+		       </ol>
+2017
+		       <ol>
 <li class="publication">Wang, J.<sup>*</sup>, Zhang, C.<sup>*</sup>, Wan, S., & Peng, G.<sup>#</sup> (2017). Is congenital amusia a disconnection syndrome? A study combining tract- and network-based analysis. <i>Frontiers in Human Neuroscience, 11</i>, 473. <a href="http://doi.org/10.3389/fnhum.2017.00473">Link</a></li>
 <li class="publication">Zhang, C.<sup>#</sup>, Shao, J., & Huang, X. (2017). Deficits of congenital amusia beyond pitch: Evidence from impaired categorical perception of vowels in Cantonese-speaking congenital amusics. <i>PLOS ONE, 12</i>(8), e0183151. <a href="https://doi.org/10.1371/journal.pone.0183151">Link</a></li>
 <li class="publication">Zhang, C.<sup>#</sup>, Peng, G., Shao, J., & Wang, W. S-Y. (2017). Neural bases of congenital amusia in tonal language speakers. <i>Neuropsychologia, 97</i>, 18–28. <a href="https://doi.org/10.1016/j.neuropsychologia.2017.01.033">Link</a></li>
 <li class="publication">Chen, S.<sup>#</sup>, Zhang, C., McCollum, A. G., & Wayland, R. (2017). Statistical modeling of phonetic and phonologised perturbation effects in tonal and non-tonal languages. <i>Speech Communication, 88</i>, 17–38. <a href="https://doi.org/10.1016/j.specom.2017.01.006">Link</a></li>
+		       </ol>
+2016 & before
+		       <ol>
 <li class="publication">Zhang, C.<sup>#</sup>, & Chen, S. (2016). Toward an integrative model of talker normalization. <i>Journal of Experimental Psychology: Human Perception and Performance, 42</i>(8), 1252–1268. <a href="https://doi.org/10.1037/xhp0000216">Link</a></li>
 <li class="publication">Zhang, C.<sup>#</sup>, Pugh, K. R., Mencl, W. E., Molfese, P. J., Frost, S. J., Magnuson, J. S., Peng, G.<sup>#</sup>, & Wang, W. S-Y. (2016). Functionally integrated neural processing of linguistic and talker information: An event-related fMRI and ERP study. <i>NeuroImage, 124</i>, 536–549. <a href="https://doi.org/10.1016/j.neuroimage.2015.08.064">Link</a></li>
 <li class="publication">Zhang, C., Xia, Q., and Peng, G.<sup>#</sup> (2015). Mandarin third tone sandhi requires more effortful phonological encoding in speech production: Evidence from an ERP study. <i>Journal of Neurolinguistics, 33</i>, 149–162. <a href="https://doi.org/10.1016/j.jneuroling.2014.07.002">Link</a></li>
@@ -117,6 +127,15 @@
                     <hr> 
 	       </section>
 
+  	       <section id="proceeding">
+                  <div class="page-header">
+                     <h3>Referred conference proceedings</h3>
+                  </div>
+                    <ol>
+<li class="publication">Zhang, C., Lee, C.-Y., Wang, W. S., Waye, M. M. Y., eds. (2022). <i>Relationship of Language and Music, Ten Years After: Neural Organization, Cross-domain Transfer and Evolutionary Origins.</i> Lausanne: Frontiers Media SA. <a href="https://www.frontiersin.org/research-topics/15843/relationship-of-language-and-music-ten-years-after-neural-organization-cross-domain-transfer-and-evolutionary-origins">Link</a></li>
+<li class="publication">Zhang, C. (2018). Phonetic constancy in the perception of Chinese tones. <i>Journal of Chinese Linguistics</i>, Monograph Series Number 28. Hong Kong: The Chinese University Press.</li>
+              </section>
+		    
 	       <section id="book">
                   <div class="page-header">
                      <h3>Book chapters</h3>
@@ -133,16 +152,7 @@
 		    <hr>
               </section>
 
-  <section id="book">
-                  <div class="page-header">
-                     <h3>Monographs</h3>
-                  </div>
-                    <ol>
-<li class="publication">Zhang, C., Lee, C.-Y., Wang, W. S., Waye, M. M. Y., eds. (2022). <i>Relationship of Language and Music, Ten Years After: Neural Organization, Cross-domain Transfer and Evolutionary Origins.</i> Lausanne: Frontiers Media SA. <a href="https://www.frontiersin.org/research-topics/15843/relationship-of-language-and-music-ten-years-after-neural-organization-cross-domain-transfer-and-evolutionary-origins">Link</a></li>
-<li class="publication">Zhang, C. (2018). Phonetic constancy in the perception of Chinese tones. <i>Journal of Chinese Linguistics</i>, Monograph Series Number 28. Hong Kong: The Chinese University Press.</li>
-              </section>
-
-  <section id="book">
+ 	      <section id="monograph">
                   <div class="page-header">
                      <h3>Monographs</h3>
                   </div>
