--- a/publications.html
+++ b/publications.html
@@ -133,16 +133,20 @@
                   </div>
 2023
                     <ol>
-<li class="publication">Chen, X., & Zhang, C. (2023). Setting the “tone” first and integrating into the syllable later: An EEG study of lexical tonal encoding in Mandarin word production. In: M. Dong, Y. Lu, & R. Jiang (Eds.), <i>Proceedings of the Second International Conference on Tone and Intonation (TAI 2023)</i> (pp. 80-82). <a href="https://www.colips.org/conferences/tai2023/proceedings/pdf/2023.tai-abstract.40.pdf">Link</a></li>
-<li class="publication">Chen, X., Lu, J., Qin, Z., Hu, X., & Zhang, C. (2023). Benefits of targeted memory reactivation in perceptual learning of non-native tones are associated with slow-oscillation phase and delta-theta power. In: M. Dong, Y. Lu, & R. Jiang (Eds.), <i>Proceedings of the Second International Conference on Tone and Intonation (TAI 2023)</i> (pp. 17-18). <a href="https://www.colips.org/conferences/tai2023/proceedings/pdf/2023.tai-abstract.9.pdf">Link</a></li>
-<li class="publication">Wu, R., Qin, Z., & Zhang, C. (2023). Daytime Naps Consolidate Cantonese Tone Learning Through Talker Generalization. In: M. Dong, Y. Lu, & R. Jiang (Eds.), <i>Proceedings of the Second International Conference on Tone and Intonation (TAI 2023)</i> (pp. 19-20). <a href="https://www.colips.org/conferences/tai2023/proceedings/pdf/2023.tai-abstract.10.pdf">Link</a></li>
-<li class="publication">Lan, W., Chen, X., & Zhang, C. (2023). An acoustic study of tone sandhi in Lishui Wu. In: R. Skarnitzl & J. Volín (Eds.), <i>Proceedings of the 20th International Congress of Phonetic Sciences (ICPhS 2023)</i> (pp. 1945-1949). <a href="https://guarant.cz/icphs2023/542.pdf">Link</a></li>		        
+<li class="publication">Chen, X., & Zhang, C. (2023). Setting the “tone” first and integrating into the syllable later: An EEG study of lexical tonal encoding in Mandarin word production. In: M. Dong, Y. Lu, & R. Jiang (Eds.), <i>Proceedings of the Second International Conference on Tone and Intonation (TAI 2023)</i> (pp. 80–82). <a href="https://www.colips.org/conferences/tai2023/proceedings/pdf/2023.tai-abstract.40.pdf">Link</a></li>
+<li class="publication">Chen, X., Lu, J., Qin, Z., Hu, X., & Zhang, C. (2023). Benefits of targeted memory reactivation in perceptual learning of non-native tones are associated with slow-oscillation phase and delta-theta power. In: M. Dong, Y. Lu, & R. Jiang (Eds.), <i>Proceedings of the Second International Conference on Tone and Intonation (TAI 2023)</i> (pp. 17–18). <a href="https://www.colips.org/conferences/tai2023/proceedings/pdf/2023.tai-abstract.9.pdf">Link</a></li>
+<li class="publication">Wu, R., Qin, Z., & Zhang, C. (2023). Daytime Naps Consolidate Cantonese Tone Learning Through Talker Generalization. In: M. Dong, Y. Lu, & R. Jiang (Eds.), <i>Proceedings of the Second International Conference on Tone and Intonation (TAI 2023)</i> (pp. 19–20). <a href="https://www.colips.org/conferences/tai2023/proceedings/pdf/2023.tai-abstract.10.pdf">Link</a></li>
+<li class="publication">Lan, W., Chen, X., & Zhang, C. (2023). An acoustic study of tone sandhi in Lishui Wu. In: R. Skarnitzl & J. Volín (Eds.), <i>Proceedings of the 20th International Congress of Phonetic Sciences (ICPhS 2023)</i> (pp. 1945–1949). <a href="https://guarant.cz/icphs2023/542.pdf">Link</a></li>		        
 		    </ol>     
-2022
+2021
 		       <ol>
-<li class="publication"></li>
-<li class="publication"></li>
+<li class="publication">Chen, X., & Zhang, C. (2021). Encoding of contextual tonal alternations in word production in Teochew. <i>Proceedings of the first International Conference on Tone and Intonation (TAI 2021)</i>. </li>
 		       </ol>
+2020
+		       <ol>
+<li class="publication">Qin. Z., & Zhang, C. (2020). How sleep-mediated memory consolidation modulates the generalization across talkers: evidence from tone identification. <i>Proceedings of the 10th International Conference on Speech Prosody 2020</i>, 459–463. <a href="https://www.isca-archive.org/speechprosody_2020/qin20_speechprosody.html">Link</a></li>
+		       </ol>
+		       
 		    <hr>
 	       </section>
 		    
