--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,8 @@
 			     <br>For any general questions, feel free to email Dr. Zhang at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</p> <br><br><br>
 
 			<img src="files/240112_HMRF.jpg" alt="HMRF" width="500" height="707">
-
+                        <br>
+		        <img src="files/240313_MOST.png" alt="HMRF" width="500" height="707">
         
 		    <hr>
               </section>
