--- a/index.html
+++ b/index.html
@@ -67,13 +67,12 @@
                   <li><b>We are looking for passionate researchers (RA/PhD/PostDoc) to join our team. If you are interested, please email Dr. Zhang with your CV at <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a>.</b></li>
                   <li><b>We are also looking for subjects (currently we mainly recruit <span style="font-weight:bold; color:#ff0000;">Cantonese-speaking children</span>) to participate in our ongoing experiments. If you are interested, please see <a href="contact.html">here</a>; and also feel free to contact <a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a> for any questions.</b></li>
 				        </ol>
-		  <hr>
+		  		<img src="files/240313_MOST.png" alt="HMRF" width="455" height="644" style='border:1.5px solid #000000' />
+		                <img src="files/240112_HMRF.jpg" alt="MOST" width="455" height="644" style='border:1.5px solid #000000' align="right" />
+		       <hr>
 		       
                   <h4>NEWS</h4>
 				        <ol>
-		  			
-		 
-		  <br>
 		  <li><span style="font-weight:bold; color:#3366ff;">[Invited Talk] 4:30PM, HKT (UTC+8), 06 Mar 2024.</span> Dr. Martin PICKERING (University of Edinburgh) on "Predicting language in difficult circumstances". <a href="https://drcczlab.github.io/files/240306_talk_MP.pdf">Abstract</a> & <a href="https://www.polyu.edu.hk/mysurvey2/index.php/671227?lang=en">Registration Link</a></li>
 		  <li><span style="font-weight:bold; color:#ff0000;">[Publication] 04 Mar 2024.</span> The collection on "Language Processing", edited by Dr. Zhang and three other co-editors, has been published online on the <i>Scientific Reports</i> website. Feel free to <a href="https://www.nature.com/collections/ghechhcdah">check it out here</a> and share this collection! </li>				
 		  <li><span style="font-weight:bold; color:#3366ff;">[Invited Talk] 5PM, HKT (UTC+8), 21 Feb 2024.</span> Dr. Christoph SCHEEPERS (University of Glasgow) on "The “Crossword Effect” in free word recall: A retrieval advantage for words encoded in line with their spatial associations". <a href="https://drcczlab.github.io/files/240221_talk_CS.pdf">Abstract</a> & <a href="https://polyu.zoom.us/j/92524418249?pwd=WjZya2lTaTFhL2w4RzkzL1dRTUJ1Zz09">Zoom Link</a></li>
