--- a/media.html
+++ b/media.html
@@ -52,8 +52,9 @@
                   <div class="page-header">
                      <h3>Media coverage</h3>
                   </div>
-		     <p>TBC</p>
-
+		     <h4><a href="https://www.polyu.edu.hk/ubsn/docdrive/Newsletter/Newsletter06.pdf">[Jun 2023] UBSN Newsletter: Dr. Caicai Zhang’s MRI Study on Children’s Learning and Memory Patterns</a><h4>
+		     <br>
+		     <h4>[Oct 2021] Faculty of Humanities Newsletter: Dr Zhang Caicai Selected as a Young Scientist to Join the 4th World Laureates Forum<h4>
         
 		    <hr>
               </section>
