--- a/media.html
+++ b/media.html
@@ -52,10 +52,11 @@
                   <div class="page-header">
                      <h3>Media coverage</h3>
                   </div>
-		     <h4><a href="https://www.polyu.edu.hk/ubsn/docdrive/Newsletter/Newsletter06.pdf">[Jun 2023] UBSN Newsletter: Dr. Caicai Zhang’s MRI Study on Children’s Learning and Memory Patterns</a><h4>
+		     <h4><a href="https://www.polyu.edu.hk/ubsn/docdrive/Newsletter/Newsletter06.pdf">[Jun 2023] Dr. Caicai Zhang’s MRI Study on Children’s Learning and Memory Patterns</a><h4>
+		     UBSN Newsletter
 		     <br>
-		     <h4>[Oct 2021] Faculty of Humanities Newsletter: Dr Zhang Caicai Selected as a Young Scientist to Join the 4th World Laureates Forum<h4>
-        
+		     <h4><a href="https://www.polyu.edu.hk/fh/news-and-events/newsletter/2021-issue-2/dr-zhang-cai-cais-nomination-as-young-scientist-to-join-the-4th-world-laureates-forum/?sc_lang=en">[Oct 2021] Dr Zhang Caicai Selected as a Young Scientist to Join the 4th World Laureates Forum</a><h4>
+        	     Faculty of Humanities Newsletter
 		    <hr>
               </section>
             </div>
