--- a/media.html
+++ b/media.html
@@ -56,10 +56,12 @@
 		     UBSN Newsletter
 		     <img src="files/media_202306_UBSN.png" alt="media_202306_UBSN" />
 		     <br><br>
-		     <h4><a href="https://www.polyu.edu.hk/fh/news-and-events/newsletter/2021-issue-2/dr-zhang-cai-cais-nomination-as-young-scientist-to-join-the-4th-world-laureates-forum/?sc_lang=en">[Oct 2021] Dr Zhang Caicai Selected as a Young Scientist to Join the 4th World Laureates Forum</a><h4>
+		     <h4><a href="https://www.polyu.edu.hk/fh/news-and-events/newsletter/2021-issue-2/dr-zhang-cai-cais-nomination-as-young-scientist-to-join-the-4th-world-laureates-forum/?sc_lang=en">[Oct 2021] Dr Zhang Caicai Selected as a Young Scientist to Join the 4th World Laureates Forum</a></h4>
         	     Faculty of Humanities Newsletter<br>
 		     <img src="files/media_202110_laureate.png" alt="media_202110_laureate" width="550" height="513" />
-		    <hr>
+		     <h4><a href="https://www.psychologicalscience.org/observer/secrets-of-the-senses">[Feb 2021] Using Neuroscience to Challenge Our Eyes and Ears </a></h4>
+        	     <i>Observer</i>, Association for Psychological Science<br>
+		     <hr>
               </section>
             </div>
          </div>
