--- a/media.html
+++ b/media.html
@@ -48,7 +48,7 @@
          <div class="row-fluid">
             <div class="span12">
                
-               <section id="recruitment">
+               <section id="media">
                   <div class="page-header">
                      <h3>Media coverage</h3>
 			  <p>Feel free to click on titles for details!</p>
@@ -58,7 +58,7 @@
 		     UBSN Newsletter, PolyU
 		        <div class="span3">
 		     <img src="files/media_202306_UBSN.png" alt="media_202306_UBSN" />
-		        </djv>
+		        </div>
 		     <br><br><br>
 		       
 		     <h4><a href="https://www.polyu.edu.hk/fh/news-and-events/newsletter/2021-issue-2/dr-zhang-cai-cais-nomination-as-young-scientist-to-join-the-4th-world-laureates-forum/?sc_lang=en">[Oct 2021] Dr Zhang Caicai Selected as a Young Scientist to Join the 4th World Laureates Forum</a></h4>
