--- a/media.html
+++ b/media.html
@@ -58,9 +58,10 @@
 			<div class="span3">
 		     <img src="files/media_202306_UBSN.png" alt="media_202306_UBSN" />
 		        </div>
+			<div class="span9">
 		     <h4><a href="https://www.polyu.edu.hk/ubsn/docdrive/Newsletter/Newsletter06.pdf">[Jun 2023] Dr. Caicai Zhang’s MRI Study on Children’s Learning and Memory Patterns</a></h4>
 		     UBSN Newsletter, PolyU
-		        
+		        </div>
 		</div>
 		     <br><br><br>
 		       
