--- a/media.html
+++ b/media.html
@@ -49,7 +49,7 @@
          <div class="row-fluid">
             <div class="span12">
                
-               <section id="articles">
+               <section id="media">
                   <div class="page-header">
                      <h3>Peer-reviewed journal articles</h3>
 		     <p>(# = corresponding author, * = co-first author, ^ = student trainees)</p>
