--- a/media.html
+++ b/media.html
@@ -61,7 +61,7 @@
   		  </div>
    		 <div class="span9">
    		   <h4><a href="https://www.polyu.edu.hk/ubsn/docdrive/Newsletter/Newsletter06.pdf">[Jun 2023] Dr. Caicai Zhang’s MRI Study on Children’s Learning and Memory Patterns</a></h4>
-    		  UBSN Newsletter, PolyU
+    		  <i>UBSN Newsletter, PolyU</i>
     		 </div>
  		 </div>
 		 <hr>
@@ -72,7 +72,7 @@
   	 	 </div>
    		  <div class="span9">
    		   <h4><a href="https://www.polyu.edu.hk/fh/news-and-events/newsletter/2021-issue-2/dr-zhang-cai-cais-nomination-as-young-scientist-to-join-the-4th-world-laureates-forum/?sc_lang=en">[Oct 2021] Dr Zhang Caicai Selected as a Young Scientist to Join the 4th World Laureates Forum</a></h4>
-   		   Faculty of Humanities Newsletter, PolyU
+   		   <i>Faculty of Humanities Newsletter, PolyU</i>
     		 </div>
 		 </div>
 		 <hr>
@@ -83,7 +83,7 @@
  		   </div>
  		   <div class="span9">
   		    <h4><a href="https://www.psychologicalscience.org/observer/secrets-of-the-senses">[Feb 2021] Using Neuroscience to Challenge Our Eyes and Ears</a></h4>
-  		    <i>Observer</i>, Association for Psychological Science
+  		    <i>Observer, Association for Psychological Science</i>
  		   </div>
 		 </div>
 		 <hr>
@@ -94,7 +94,7 @@
  		   </div>
   		  <div class="span9">
    		   <h4><a href="https://www.psychologicalscience.org/observer/secrets-of-the-senses">[Jan 2019] 唱歌常走音 理大諗計醫</a></h4>
-    		  Wen Wei Po 文匯報
+    		  <i>Wen Wei Po 文匯報</i>
    		 </div>
 		 </div>
 		 <hr>
@@ -106,7 +106,7 @@
   		  <div class="span9">
    		   <h4><a href="https://www.polyu.edu.hk/cpa/milestones/tc/201709/research_innovation/life_sciences/myth_of_tone_deaf/index.html">[Oct 2017] 五音不全的迷思 </h4><br>
 		   <h4><a href="https://www.polyu.edu.hk/cpa/milestones/en/201709/research_innovation/life_sciences/myth_of_tone_deaf/index.html">[Oct 2017] Myth of tone deaf (English version)</a></h4>  
-    		  PolyU Milestones 理程
+    		  <i>PolyU Milestones 理程</i>
    		 </div>
 		 </div>
 		 <hr>	       
@@ -117,7 +117,7 @@
  		   </div>
   		  <div class="span9">
    		   <h4><a href="https://www.mingpaocanada.com/TOR/htm/News/20170502/hk-gna1_r.htm">[May 2017] 失樂症患者 走音不自知 百中有四 無礙溝通</a></h4>
-    		  Ming Pao 明報
+    		  <i>Ming Pao 明報</i>
    		 </div>
 		 </div>
 		 <hr>
@@ -128,7 +128,7 @@
  		   </div>
   		  <div class="span9">
    		   <h4><a href="https://www.hk01.com/%E7%86%B1%E7%88%86%E8%A9%B1%E9%A1%8C/73913/%E8%81%BD%E5%8A%9B%E6%B8%AC%E8%A9%A6-%E7%90%86%E5%A4%A7%E6%8B%9B%E5%8B%9F%E9%9F%B3%E7%99%A1%E9%80%B2%E8%A1%8C%E7%A0%94%E7%A9%B6-%E8%B5%B0%E9%9F%B3%E4%B9%8B%E7%8E%8B%E6%9C%89%E6%A9%9F%E6%9C%83%E8%B3%BA600%E5%85%83">[Mar 2017] 理大招募音癡進行研究</a></h4>
-    		  HK01
+    		  <i>HK01</i>
    		 </div>
 		 </div>
 		 <hr>
