--- a/media.html
+++ b/media.html
@@ -104,7 +104,7 @@
    		   <img src="files/media_201710_milestone.png" alt="media_201710_milestone.png" />
  		   </div>
   		  <div class="span9">
-   		   <h4><a href="https://www.polyu.edu.hk/cpa/milestones/tc/201709/research_innovation/life_sciences/myth_of_tone_deaf/index.html">[Oct 2017] 五音不全的迷思 </h4><br>
+   		   <h4><a href="https://www.polyu.edu.hk/cpa/milestones/tc/201709/research_innovation/life_sciences/myth_of_tone_deaf/index.html">[Oct 2017] 五音不全的迷思</a></h4>
 		   <h4><a href="https://www.polyu.edu.hk/cpa/milestones/en/201709/research_innovation/life_sciences/myth_of_tone_deaf/index.html">[Oct 2017] Myth of tone deaf (English version)</a></h4>  
     		  <i>PolyU Milestones 理程</i>
    		 </div>
