--- a/publications.html
+++ b/publications.html
@@ -144,8 +144,26 @@
 		       </ol>
 2020
 		       <ol>
-<li class="publication">Qin. Z., & Zhang, C. (2020). How sleep-mediated memory consolidation modulates the generalization across talkers: evidence from tone identification. <i>Proceedings of the 10th International Conference on Speech Prosody 2020</i>, 459–463. <a href="https://www.isca-archive.org/speechprosody_2020/qin20_speechprosody.html">Link</a></li>
+<li class="publication">Qin. Z., & Zhang, C. (2020). How sleep-mediated memory consolidation modulates the generalization across talkers: evidence from tone identification. <i>Proceedings of the 10th International Conference on Speech Prosody 2020 (SP 2020)</i>, 459–463. <a href="https://www.isca-archive.org/speechprosody_2020/qin20_speechprosody.pdf">Link</a></li>
 		       </ol>
+2019
+		       <ol>
+<li class="publication">Zhang, G., Shao, J., Wang, L., & Zhang, C. (2019). The perception of lexical tone in whispered speech by Mandarin-speaking congenital amusics. <i>Proceedings of the 19th International Congress of the Phonetic Sciences (ICPhS 2019)</i>, 3872–3876. <a href="https://ira.lib.polyu.edu.hk/bitstream/10397/92338/1/ICPhS_3921.pdf">Link</a></li>
+<li class="publication">Huang, X., Zuo, Y., & Zhang, C. (2019). Seven-year-olds reach an adult-like productivity in the application of Mandarin tone sandhi. <i>Proceedings of the 19th International Congress of the Phonetic Sciences (ICPhS 2019)</i>, 3125–3129. <a href="https://ira.lib.polyu.edu.hk/bitstream/10397/92339/1/ICPhS_3174.pdf">Link</a></li>
+<li class="publication">Shao, J., Wang, L., & Zhang, C. (2019). Impaired talker recognition in Mandarin-speaking congenital amusics. <i>Proceedings of the 19th International Congress of the Phonetic Sciences (ICPhS 2019)</i>, 1808–1812. <a href="https://www.internationalphoneticassociation.org/icphs-proceedings/ICPhS2019/papers/ICPhS_1857.pdf">Link</a></li>
+<li class="publication">Ho, O. Y., Shao, J., Ou, J., Law, S.-P., & Zhang, C. (2019). Congenital amusia and tone merger: Perception and production of lexical tones in Hong Kong Cantonese. <i>Proceedings of the 19th International Congress of the Phonetic Sciences (ICPhS 2019)</i>, 177–181. <a href="https://www.internationalphoneticassociation.org/icphs-proceedings/ICPhS2019/papers/ICPhS_226.pdf">Link</a></li>
+		       </ol>
+2018
+		       <ol>
+<li class="publication">Zhang, K., Sjerps M. J., Zhang, C., & Peng, G. (2018). Extrinsic normalization of lexical tones and vowels: Beyond a simple general contrastive perceptual mechanism. <i>Proceedings of the 6th International Symposium on Tonal Aspects of Languages (TAL 2018)</i>, 227–231. <a href="https://ira.lib.polyu.edu.hk/bitstream/10397/89644/1/a0651-n06.pdf">Link</a></li>
+<li class="publication">Zhang, G., Shao, J., Zhang, Y., & Zhang, C. (2018). Revisiting hemispheric lateralization for Cantonese lexical tone processing in dichotic listening. <i>Proceedings of the 6th International Symposium on Tonal Aspects of Languages (TAL 2018)</i>, 129–133. <a href="https://www.isca-archive.org/tal_2018/zhang18_tal.pdf">Link</a></li>
+<li class="publication">Huang, X., Zhang, G., & Zhang, C. (2018). A preliminary study on the productivity of Mandarin T3 sandhi in Mandarin speaking children. <i>Proceedings of the 6th International Symposium on Tonal Aspects of Languages (TAL 2018)</i>, 88–92. <a href="https://www.isca-archive.org/tal_2018/huang18_tal.pdf">Link</a></li>
+<li class="publication">Ho, O. Y., Shao, J., Ou, J., Law, S.-P., & Zhang, C. (2018). Tone merging patterns in congenital amusia in Hong Kong Cantonese. <i>Proceedings of the 6th International Symposium on Tonal Aspects of Languages (TAL 2018)</i>, 134–138. <a href="https://www.isca-archive.org/tal_2018/ho18_tal.pdf">Link</a></li>
+<li class="publication">Shao, J., Tang, P. O. C., & Zhang, C. (2018). The effect of syllable variation on the perception of lexical tones in Cantonese-speaking amusics. Speech Prosody 2018, 148–152. <a href="https://www.isca-archive.org/speechprosody_2018/shao18_speechprosody.pdf">Link</a></li>
+<li class="publication"><a href="">Link</a></li>
+<li class="publication"><a href="">Link</a></li>
+		       </ol>		       
+
 		       
 		    <hr>
 	       </section>
